[package]
name = "blockchain-pos-poh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
chrono = "0.4.23"
hex = "0.4.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "1.14.0"
rand = "0.8.5"
ring = "0.16.20"
bs58 = "0.4.0"
bincode = "1.3.3"

rocksdb = "0.20.1"
farmhash = "1.1.5"
parking_lot = "0.12.1"