[package]
name = "blockchain-pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
chrono = "0.4.23"
hex = "0.4.3"
crypto-hash = "0.3.4"